package drizzled.message;
option optimize_for = SPEED;

import "table.proto";
import "schema.proto";
import "transaction.proto";

/*
 * Represents a single record being returned
 *
 * @note 
 *
 * A ResultSet contains one or more SelectRecord submessages, each
 * of which represents a single record returned
 */
message SelectRecord
{
  repeated bytes record_value = 1;
}

message SelectHeader
{
  repeated TableMetadata table_metadata = 1; /* Minimal metadata about the table affected */
  repeated FieldMetadata field_metadata = 2; /* Collection of metadata about fields affected */
}

message SelectData
{
  required uint32 segment_id = 1; /* The segment number */
  required bool end_segment = 2; /* Is this the final segment? */
  repeated SelectRecord record = 3; /* The records inserted */
}
/*
 * The message is composed the hash of the query, 
 * a header (SelectHeader) containing metadata about:
 * returned tables and fields.
 * One or more data * segments (SelectData) containing the actual records
 * being returned.
 */
message Resultset
{
  required string key= 1; /* contains a hashed value of: query + schema*/
  required string schema= 2; /*current schema */
  optional string sql = 3; /* May contain the original SQL string */
  optional SelectHeader select_header = 4;
  optional SelectData select_data = 5;
}
